--- a/index.html
+++ b/index.html
@@ -14,33 +14,9 @@
     </div>
   
   <div class="container">
-    <!-- Language Selector (más pequeño) -->
-    <div class="language-selector">
-      <div class="language-dropdown" id="languageDropdown">
-        <button class="language-btn" id="languageBtn">
-          <span class="flag" id="currentFlag"></span>
-          <span id="currentLang">ES</span>
-          <span class="arrow">▼</span>
-        </button>
-        <div class="language-options" id="languageOptions">
-          <div class="language-option active" data-lang="es">
-            <span class="flag"></span>
-            <span>Español</span>
-          </div>
-          <div class="language-option" data-lang="en">
-            <span class="flag"></span>
-            <span>English</span>
-          </div>
-          <div class="language-option" data-lang="de">
-            <span class="flag"></span>
-            <span>Deutsch</span>
-          </div>
-          <div class="language-option" data-lang="fr">
-            <span class="flag"></span>
-            <span>Français</span>
-          </div>
-        </div>
-      </div>
+    <!-- Language Selector -->
+    <div id="language-selector-container" class="language-selector-container">
+      <!-- Las banderas se insertarán aquí dinámicamente -->
     </div>
 
     <div id="initial-view">
