--- a/index.html
+++ b/index.html
@@ -154,5 +154,10 @@
 </div>
 
   <script type="module" src="js/app.js"></script>
+
+  <!-- Barra de CTA fija para móviles -->
+  <div class="fixed-cta-container hidden" id="fixed-cta-bar">
+    <button class="confirmation-btn" id="fixed-cta-btn"></button>
+  </div>
 </body>
 </html>
