--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
             <textarea class="form-input form-textarea" data-placeholder="feedbackPlaceholder" required></textarea>
           </div>
           <div class="form-group privacy-policy-group">
-            <input type="checkbox" id="privacyPolicy" name="privacyPolicy" required>
-            <label for="privacyPolicy" id="privacyPolicyLabel"></label>
+            <div class="privacy-check-wrapper">
+              <input type="checkbox" id="privacyPolicy" name="privacyPolicy" required>
+              <label for="privacyPolicy" id="privacyPolicyLabel"></label>
+            </div>
+            <a href="#" id="openPrivacyPopup" class="privacy-link"></a>
           </div>
           <button type="submit" class="submit-btn premium-submit">
             <span id="submitText"></span>
@@ -148,6 +151,7 @@
     <div class="popup-content">
       <button id="closePrivacyPopup" class="popup-close">&times;</button>
       <div id="privacyPopupContent"></div>
+      <button id="closePrivacyTextBtn" class="popup-close-text-btn"></button>
     </div>
   </div>
 
