--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
       <div class="form-section final-step">
         <h3 class="urgent-final"><span data-text="googleReviewTitle">¡Último paso! Completa tu reseña. Recibirás el código de tu premio por email automáticamente</span></h3>
         <div class="google-timer" id="googleTimer">30:00</div>
-        <button class="google-btn premium-google" onclick="goToReview()">
-          <span data-text="googleBtn">COMPLETAR RESEÑA</span>
-        </button>
+        <div id="googleBtnContainer">
+          <button class="google-btn premium-google" onclick="goToReview()">
+            <span data-text="googleBtn">DEJAR MI OPINIÓN EN GOOGLE</span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
