--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="big-prizes-preview">
         <div class="prize-preview-item">
           <span class="prize-icon">🍽️</span>
-          <span class="prize-text" data-text="dinnerForTwo">CENA GRATIS PARA 2</span>
+          <span class="prize-text" data-text="dinnerForTwo">CENA (VALOR 60€)</span>
         </div>
         <div class="prize-preview-item">
           <span class="prize-icon">💰</span>
