--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -375,7 +375,7 @@
                         <div class="review"><blockquote>${reviewText}</blockquote></div>
                         <div class="opinion-card-footer">
                             <span><strong>Fecha:</strong> ${opinion.date || 'N/A'}, ${opinion.time || 'N/A'}</span> |
-                            <span><strong>Premio:</strong> ${opinion.premio || 'N/A'} (${opinion.code || 'N/A'})</span> |
+                            <span><strong>Premio:</strong> ${opinion.premio || 'N/A'} (${opinion.codigoPremio || 'N/A'})</span> |
                             <span><strong>Idioma:</strong> ${(opinion.lang || 'N/A').toUpperCase()}</span>
                         </div>
                     </div>`;
