--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -133,7 +133,7 @@
             margin-top: 15px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-end;
+            justify-content: flex-start;
             gap: 0 8px;
         }
 
@@ -147,7 +147,7 @@
             .opinion-card-footer {
                 flex-direction: column;
                 gap: 4px;
-                align-items: flex-end;
+                align-items: flex-start;
             }
             .opinion-card-footer span:not(:last-child)::after {
                 content: "";
