--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -237,6 +237,6 @@
         <div id="pagination-container" class="pagination-container"></div>
     </div>
 
-    <script type="module" src="../js/opiniones.js"></script>
+    <script src="../js/opiniones.js"></script>
 </body>
 </html>
