--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -234,6 +234,7 @@
             <div class="loader">Cargando opiniones...</div>
         </div>
 
+        <div id="pagination-container" class="pagination-container"></div>
     </div>
 
     <script type="module" src="../js/opiniones.js"></script>
