--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -226,6 +226,10 @@
                     <option value="1">★☆☆☆☆ (1)</option>
                 </select>
             </div>
+            <div class="filter-group">
+                <label for="limit-filter">Resultados por página:</label>
+                <input type="number" id="limit-filter" value="10" min="10" max="100" step="10" style="width: 70px;">
+            </div>
         </div>
 
         <div id="opiniones-counter"></div>
