--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -228,7 +228,18 @@
             </div>
             <div class="filter-group">
                 <label for="limit-filter">Resultados por página:</label>
-                <input type="number" id="limit-filter" value="10" min="10" max="100" step="10" style="width: 70px;">
+                <select id="limit-filter">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                    <option value="60">60</option>
+                    <option value="70">70</option>
+                    <option value="80">80</option>
+                    <option value="90">90</option>
+                    <option value="100">100</option>
+                </select>
             </div>
         </div>
 
