--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -238,7 +238,7 @@
                     <option value="70">70</option>
                     <option value="80">80</option>
                     <option value="90">90</option>
-                    <option value="100">100</option>
+                    <option value="100" selected>100</option>
                 </select>
             </div>
         </div>
