--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               <label for="privacyPolicy" id="privacyPolicyLabel"></label>
             </div>
             <a href="#" id="openPrivacyPopup" class="privacy-link"></a>
+            <div id="privacy-error" class="field-error hidden"></div>
           </div>
           <button type="submit" class="submit-btn premium-submit">
             <span id="submitText"></span>
