--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3 class="form-title-premium"><span data-text="improveQuestion">¿Dónde enviamos tu PREMIO? 🎁</span></h3>
         <p class="email-warning-text"><span data-text="emailWarning"></span></p>
         
-        <form id="feedbackForm">
+        <form id="feedbackForm" novalidate>
           <div class="form-group">
             <input type="text" class="form-input premium-input" data-placeholder="namePlaceholder" required>
           </div>
