--- a/index.html
+++ b/index.html
@@ -85,12 +85,15 @@
         <form id="feedbackForm" novalidate>
           <div class="form-group">
             <input type="text" class="form-input premium-input" data-placeholder="namePlaceholder" required>
+            <div id="name-error" class="field-error"></div>
           </div>
           <div class="form-group">
             <input type="email" class="form-input premium-input" data-placeholder="emailPlaceholder" required>
+            <div id="email-error" class="field-error"></div>
           </div>
           <div class="form-group" id="feedback-group">
             <textarea class="form-input form-textarea" data-placeholder="feedbackPlaceholder" required></textarea>
+            <div id="feedback-error" class="field-error"></div>
           </div>
           <div class="form-group privacy-policy-group">
             <div class="privacy-check-wrapper">
@@ -98,7 +101,7 @@
               <label for="privacyPolicy" id="privacyPolicyLabel"></label>
             </div>
             <a href="#" id="openPrivacyPopup" class="privacy-link"></a>
-            <div id="privacy-error" class="field-error hidden"></div>
+            <div id="privacy-error" class="field-error"></div>
           </div>
           <button type="submit" class="submit-btn premium-submit">
             <span id="submitText"></span>
