Cambio nombre boton a COMPLETAR MI RESEÑA

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="google-timer" id="googleTimer">05:00</div>
         <div id="googleBtnContainer">
           <button class="google-btn premium-google" onclick="goToReview()">
-            <span data-text="googleBtn">DEJAR MI OPINIÓN EN GOOGLE</span>
+            <span data-text="googleBtn"></span>
           </button>
         </div>
       </div>
