--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -209,7 +209,8 @@
                 <label>Ver opiniones de:</label>
                 <div>
                     <button id="filter-all">Todas</button>
-                    <button id="filter-today" class="active">Hoy</button>
+<button id="filter-today" class="active">Hoy</button>
+<button id="filter-yesterday">Ayer</button>
                     <button id="filter-week">Última Semana</button>
                     <button id="filter-month">Último Mes</button>
                     <button id="filter-3months">Últimos 3 Meses</button>
