--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 
   <!-- Barra de CTA fija para móviles -->
   <div class="fixed-cta-container hidden" id="fixed-cta-bar">
-    <button class="confirmation-btn" id="fixed-cta-btn"></button>
+    <button class="confirmation-btn" id="fixed-cta-btn" data-text=""></button>
+    <button class="confirmation-btn" id="fixed-cta-btn-form" data-text="submitBtn">Continuar</button>
+    <button class="confirmation-btn" id="fixed-cta-btn-review" data-text="googleBtn">Completar mi reseña</button>
   </div>
 </body>
 </html>
