Corrección contador estadísticas

--- a/opiniones/index.html
+++ b/opiniones/index.html
@@ -199,6 +199,7 @@
 
         <div class="stats-container">
             <h2>Estadísticas de Premios</h2>
+            <div id="total-prizes-container" style="text-align: center; font-size: 1.1em; margin-bottom: 15px;"></div>
             <div id="stats-grid" class="stats-grid">
                 <div class="loader">Calculando estadísticas...</div>
             </div>
